<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_nav_graph"
    app:startDestination="@id/fragment_chat_list">

    <include app:graph="@navigation/chat_graph" />

    <fragment
        android:id="@+id/fragment_chat_list"
        android:name="com.vladrip.ifchat.ui.chatlist.ChatListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_chat_list">

        <action
            android:id="@+id/action_chat_list_to_chat"
            app:destination="@id/chat_graph" />
    </fragment>

    <fragment
        android:id="@+id/fragment_contacts"
        android:name="com.vladrip.ifchat.ui.contacts.ContactsFragment"
        android:label="@string/contacts" />

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.vladrip.ifchat.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>