<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_64sdp"
    android:layout_marginHorizontal="@dimen/_8sdp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/chat_image"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <Space
        android:id="@+id/pivot_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_6sdp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_toEndOf="@id/chat_image" />

    <TextView
        android:id="@+id/chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pivot_center"
        android:layout_alignStart="@id/pivot_center"
        android:text="@string/test_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/chat_short_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pivot_center"
        android:layout_alignStart="@id/chat_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/test_list_chat_short_info" />

    <TextView
        android:id="@+id/chat_last_msg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/chat_name"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:text="@string/test_chat_last_msg_time" />
</RelativeLayout>