<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_54sdp"
    android:layout_marginHorizontal="@dimen/_8sdp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/member_avatar"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <Space
        android:id="@+id/pivot_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_6sdp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_toEndOf="@id/member_avatar" />

    <TextView
        android:id="@+id/member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pivot_center"
        android:layout_alignStart="@id/pivot_center"
        android:text="@string/test_username"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/member_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pivot_center"
        android:layout_alignStart="@id/member_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/last_online_at" />
</RelativeLayout>